trunk/Archive2/5a/683ef18bb859ec/output
main.cpp:9:18: error: cannot call member function 'int S::silly()' without object
   decltype(silly()) l;  
                  ^
main.cpp:9:18: error: cannot call member function 'int S::silly()' without object
