trunk/Archive2/5a/683ef18bb859ec/main.cpp
#include <iostream>

class S {
  int silly() {
    return 1;
  }
  
public:
  decltype(silly()) l;  
};

int main() {
  
}
